# ZoarialBareOS

./: .clang-format  .gdbinit  .gitignore  CMakeLists.txt  Makefile  README.md  boot.s
Meta/: build-image-grub.fish  run-image-libvirt.fish
dep/c/: kernel.d
include/arch/i386/: vga.h
include/arch/i686/: gdt.h  inline-asm.h  memory.h  pic.h
include/arch/i686/driver/PS2/: constants.h  ps2.h
include/kernel/: panic.h
include/libc/: stdio.h
include/multiboot/: multiboot.h
kernel/: CMakeLists.txt  grub.cfg  kernel.c  panic.c  panic.h  stackProtection.c  tty.c  tty.h
kernel/arch/i686/: boot.S  gdt.c  idt.h  linker.lds  memory.h  pic.h  vga.c  vga.h
kernel/arch/i686/driver/PS2/: keyboard_isr.S  ps2.c  ps2.h
kernel/arch/i686/interrupts/: idt.S  idt.c  pic.c
kernel/arch/i686/interrupts/exceptionHandlers/: exception_handlers.S
src/: linker.ld  linker.lds
src/arch/i386/: boot.s  vga.c
src/arch/i686/: boot.S  boot.s  gdt.S  gdt.c  idt.S  idt.c  pic.c  vga.c
src/arch/i686/driver/PS2/: keyboard_isr.S  ps2.c
src/arch/i686/interrupts/: idt.c  pic.c
src/arch/i686/interrupts/exceptionHandlers/: exception_handlers.S
src/c/: kernel.c
src/kernel/: kernel.c  panic.c  stackProtection.c  tty.c
src/libc/stdio/: printf.c
